--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                             <span><i class="fas fa-user"></i> Lead Developer</span>
                             <span><i class="fas fa-calendar"></i> Feb - Mar 2025</span>
                         </div>
-                        <p class="project-description">A web app designed to bridge communication gaps for deaf refugees in medical settings. LYRA uses sign language recognition and real-time text translation to help users communicate symptoms clearly to healthcare providers.</p>
+                        <p class="project-description">A Mobile app designed to bridge communication gaps for deaf refugees in medical settings. LYRA uses sign language recognition and real-time text translation to help users communicate symptoms clearly to healthcare providers.</p>
                         <div class="project-tags">
                             <span class="project-tag">Python</span>
                             <span class="project-tag">React.js</span>
